--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "readmeFilename": "README.md",
   "gitHead": "e6be14fb2c8a6f3111d84b34822f1d4efae5fa85",
   "dependencies": {
-    "express": "~3.3.4"
+    "express": "~3.3.4",
+    "socket.io": "~0.9.16"
   }
 }
